<resources>
    <string name="preference_profile_details">Profile Preferences</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="app_name">FoodRunner</string>
    <string name="food_runner_name">FoodRunner</string>
    <string name="mobile_number_hint_text">\ Mobile Number (10 digits)</string>
    <string name="password">\ Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text"><u>Forgot Password?</u></string>
    <string name="sign_up_text">Don\'t have an account? Sign up now</string>
    <string name="number">\ MOBILE_NUMBER_HERE</string>
    <string name="password_text">\ PASSWORD_HERE</string>
    <string name="name_hint_text">\ Name (Min. 3 characters)</string>
    <string name="email_address_hint_text">\ Email Address</string>
    <string name="delivery_address_hint_text">\ Delivery Address</string>
    <string name="confirm_password_hint_text">\ Confirm Password</string>
    <string name="register">Register</string>
    <string name="description_text">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="email_here">\ EMAIL_HERE</string>
    <string name="navigation_drawer">Higher Order Functionality</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQs</string>
    <string name="logout">Log out</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint_text">Password (Min. 6 characters)</string>
    <string name="history">Order History</string>
    <string name="filter">Filter</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="new_password">New Password</string>
    <string name="new_password_min_4_characters">New Password (Min. 6 characters)</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="search_restaurants">Search Restaurants</string>
</resources>
