<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.ForgotPasswordDetailsFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/description_text"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/txtDescription"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_daw"
        android:hint="@string/mobile_number_hint_text"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text_daw"
        android:hint="@string/email_address_hint_text"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="#e71c23"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>