<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.RegisterScreen">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_daw"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/name_hint_text"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_daw"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/email_address_hint_text"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_daw"
                android:drawableStart="@drawable/ic_smartphone_black_24dp"
                android:hint="@string/mobile_number_hint_text"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_daw"
                android:drawableStart="@drawable/ic_place_black_24dp"
                android:hint="@string/delivery_address_hint_text"
                android:inputType="textPostalAddress"
                android:maxLength="100"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_daw"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/password_hint_text"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_daw"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/confirm_password_hint_text"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:background="#e71c23"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>